<resources>
    <string name="app_name">GroceryButler</string>

    <!-- Button Text -->
    <string name="btn_new_list">Create New Shopping List</string>
    <string name="btn_manage_list">Manage Shopping Lists</string>
    <string name="btn_new_recipe">Create New Recipe</string>
    <string name="btn_manage_recipes">Manage Recipes</string>
    <string name="title_activity_new_shopping_list">NewShoppingListActivity</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shopping_lists">Shopping Lists</string>
    <string name="oldest_to_newest">Oldest to Newest</string>
    <string name="newest_to_oldest">Newest to Oldest</string>
    <string name="z_a">Z-A</string>
    <string name="a_z">A-Z</string>
    <string name="recipes">Recipes</string>
    <string name="title_activity_new_recipe">NewRecipe</string>
    <string name="ingredient_detail">Ingredient Detail</string>
    <string name="save">Save</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="recipe_instructions">Recipe Instructions</string>
    <string name="quantity">Quantity</string>
    <string name="measurement">Measurement</string>
</resources>
