<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.NewIngredient">


    <android.support.v7.widget.Toolbar
        android:id="@+id/manage_recipes_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <Button
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:paddingLeft="16dp"
            android:layout_marginStart="16dp"
            android:id="@+id/cancel"
            android:background="@drawable/ic_close_white_24px"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_detail"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/save"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/save"
            android:textSize="14sp"
            android:layout_gravity="right"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimary"
            />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingredient_name"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

             <Spinner
                android:id="@+id/whole_qty"
                 android:layout_weight="0.02"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
             </Spinner>

            <Spinner
                android:id="@+id/partial_qty"
                android:layout_weight="0.02"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
            </Spinner>

        </LinearLayout>

        <Spinner
            android:id="@+id/measurements"
            android:layout_width="100dp"
            android:layout_height="wrap_content">
        </Spinner>

    </LinearLayout>
</LinearLayout>
